yaml/all-in-one.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-cloud

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-test
  namespace: spring-cloud
spec:
  selector:
    matchLabels:
      app: spring-cloud
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: spring-cloud
    spec:
    #   nodeSelector:
        # kubernetes.io/hostname: 192.168.120.135
      containers:
      - name: nacos-server
        image: 192.168.120.133:5000/nacos-server:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 520Mi
        ports:
        - containerPort:  8848
        volumeMounts:
        - name: nacos-config-volume
          mountPath: "/home/nacos/conf/application.properties"
          subPath: "application.properties"
        - name: nacos-logs-dir
          mountPath: "/home/nacos/logs"
      - name: service-producer
        image: 192.168.120.133:5000/service-producer:0.0.3
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 520Mi
        ports:
        - containerPort: 19001
        volumeMounts:
        - name: application-logs-dir
          mountPath: "/var/log"
      - name: service-consumer
        image: 192.168.120.133:5000/service-consumer:0.0.1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 520Mi
        ports:
        - containerPort: 19002
      - name: service-gateway
        image: 192.168.120.133:5000/service-gateway:0.0.2
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 520Mi        
        ports:
        - containerPort: 19003
      - name: service-web
        image: 192.168.120.133:5000/service-web:0.0.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-config-volume
          mountPath: "/etc/nginx/conf.d/"
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 500m
            memory: 100Mi
      volumes:
      - name: nacos-config-volume
        configMap:
          name: nacos-config
      - name: nacos-logs-dir
        hostPath:
          path: /var/log/spring-cloud-nacos
          type: DirectoryOrCreate
      - name: application-logs-dir
        hostPath:
          path: /var/log/spring-cloud-app
          type: DirectoryOrCreate
      - name: nginx-config-volume
        configMap:
          name: nginx-config
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: spring-cloud-test
  namespace: spring-cloud
spec:
  selector:
    app: spring-cloud
  type: ClusterIP
#   type: NodePort
  ports:
  - port: 19001
    targetPort: 19001
    name: service-producer
    protocol: TCP
    # nodePort: 30901
  - port: 19002
    targetPort: 19002
    name: service-consumer
    protocol: TCP
    # nodePort: 30902
  - port: 19003
    targetPort: 19003
    name: service-gateway
    protocol: TCP
    # nodePort: 30903
  - port: 8848
    targetPort: 8848
    name: nacos
    protocol: TCP
    # nodePort: 30848
  - port: 8080
    targetPort: 8080
    name: web
    protocol: TCP
    # nodePort: 30080
