yaml/mysql.yml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-demo

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: k8s-demo
  labels:
    k8s.kuboard.cn/layer: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          imagePullPolicy: IfNotPresent
          args:
            - "--ignore-db-dir=lost+found"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-config-volume
              mountPath: "/etc/mysql/mysql.conf.d/"
            - name: log-volume
              mountPath: "/var/log"
      volumes:
        - name: mysql-config-volume
          configMap:
            name: mysql-config
        - name: log-volume
          emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: k8s-demo
  labels:
    name: mysql-svc
spec:
  type: NodePort
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
      name: http
      nodePort: 30036
  selector:
    app: mysql
