yaml/nacos.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo-nacos-deployment
  namespace: k8s-demo
  labels:
    k8s.kuboard.cn/layer: svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-demo
  template:
    metadata:
      labels:
        app: k8s-demo
    spec:
      containers:
        - name: nacos-server
          image: 192.168.120.133:5000/nacos-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8848
          resources:
            limits:
              cpu: 500m
              memory: 1200Mi
            requests:
              cpu: 100m
              memory: 1024Mi
---

apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-nacos-svc
  namespace: k8s-demo
  labels:
    name: k8s-demo-nacos-svc
spec:
  type: NodePort
  ports:
    - port: 8848
      targetPort: 8848
      name: nacos
      protocol: TCP
      nodePort: 30848
  selector:
    app: k8s-demo
