yaml/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo-web-deployment
  namespace: k8s-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-web-demo
  template:
    metadata:
      labels:
        app: k8s-web-demo
    spec:
      containers:
        - name: service-web
          image: 192.168.120.133:5000/service-web:0.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-web-svc
  namespace: k8s-demo
  labels:
    name: k8s-demo-web-svc
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      name: web
      protocol: TCP
      nodePort: 30080
  selector:
    app: k8s-web-demo
